Fixed broken layout on desktop and Scroll issue

--- a/client/src/app/js/components/shared/landingpage.css
+++ b/client/src/app/js/components/shared/landingpage.css
@@ -36,8 +36,9 @@
   font-weight: 900;
   font-size: larger;
 }
-
-
+.themePreview > a{
+  text-decoration: none;
+}
 /* Bigger than 550 */
 @media (min-width: 550px) {
   .section {
